maze.lessons.maze.island.IslandMaze.scala.error
Escaper:19: error: expected class or object definition
def nord2() {
^Escaper:27: error: Unmatched closing brace '}' ignored here
        droite() }
                 ^